--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.18",
     "@types/react": "^17.0.15",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.9",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
